# Crawler

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
docs/Build_logs/: 18_july_2026.md  20_july_2026_logs.md  21_july_2026_logs.md  22_july_2026_logs.md
docs/Design_Journal/: 18_july_2026_journal.md  20_july_2026_journal.md  21_july_2026_journal.md
docs/Design_Proposal/: Crawler_Design_Proposal.md
include/: Crawler.h  Fetcher.h  Frontier.h  LinkExtractor.h  PageStorage.h  SeenStore.h  URLNormalizer.h
src/Crawler/: Crawler.cpp
src/Fetcher/: Fetcher.cpp
src/Frontier/: Crawler_vivek.code-workspace  Frontier.cpp
src/LinkExtractor/: LinkExtractor.cpp
src/PageStorage/: PageStorage.cpp
src/SeenStore/: SeenStore.cpp
src/URLNormalizer/: URLNormalizer.cpp
